--- a/short_experiments/shadow_tokens_temp.ipynb
+++ b/short_experiments/shadow_tokens_temp.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T20:57:26.698130Z",
-     "start_time": "2025-03-17T20:57:09.533395Z"
+     "end_time": "2025-03-18T07:37:16.702522Z",
+     "start_time": "2025-03-18T07:37:16.699182Z"
     }
    },
    "cell_type": "code",
@@ -14,17 +14,19 @@
     "from tqdm import tqdm\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "# from torch.linalg import svd\n",
-    "from torch.linalg import svd"
+    "from torch.linalg import svd\n",
+    "\n",
+    "from torch.nn.functional import relu"
    ],
    "id": "c8a4c2d3a58c68cd",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T20:57:35.755540Z",
-     "start_time": "2025-03-17T20:57:26.702133Z"
+     "end_time": "2025-03-18T08:00:16.267154Z",
+     "start_time": "2025-03-18T08:00:11.790033Z"
     }
    },
    "cell_type": "code",
@@ -40,26 +42,29 @@
    ],
    "id": "b835f2d03816e47b",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 63
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T20:57:36.380607Z",
-     "start_time": "2025-03-17T20:57:36.378020Z"
+     "end_time": "2025-03-18T08:00:16.275077Z",
+     "start_time": "2025-03-18T08:00:16.272584Z"
     }
    },
    "cell_type": "code",
-   "source": "embeddings = head",
+   "source": [
+    "embeddings = head\n",
+    "embeddings.requires_grad = False"
+   ],
    "id": "5fef29185b12e15e",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 64
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T20:57:50.768772Z",
-     "start_time": "2025-03-17T20:57:36.409157Z"
+     "end_time": "2025-03-18T07:31:36.319573Z",
+     "start_time": "2025-03-18T07:31:22.696877Z"
     }
    },
    "cell_type": "code",
@@ -91,9 +96,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/13 [00:00<?, ?it/s]C:\\Users\\Timur\\AppData\\Local\\Temp\\ipykernel_5168\\2878507353.py:15: DeprecationWarning: __array__ implementation doesn't accept a copy keyword, so passing copy=False failed. __array__ must implement 'dtype' and 'copy' keyword arguments.\n",
+      "  0%|          | 0/13 [00:00<?, ?it/s]C:\\Users\\Timur\\AppData\\Local\\Temp\\ipykernel_21532\\2878507353.py:15: DeprecationWarning: __array__ implementation doesn't accept a copy keyword, so passing copy=False failed. __array__ must implement 'dtype' and 'copy' keyword arguments.\n",
       "  w = np.array(torch.argmax(X @ embeddings.T, dim=-1).cpu())\n",
-      "100%|██████████| 13/13 [00:13<00:00,  1.07s/it]"
+      "100%|██████████| 13/13 [00:13<00:00,  1.02s/it]"
      ]
     },
     {
@@ -116,8 +121,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T20:57:52.715065Z",
-     "start_time": "2025-03-17T20:57:50.953689Z"
+     "end_time": "2025-03-18T07:31:38.279444Z",
+     "start_time": "2025-03-18T07:31:36.472975Z"
     }
    },
    "cell_type": "code",
@@ -140,47 +145,199 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-17T20:57:52.775735Z",
-     "start_time": "2025-03-17T20:57:52.754805Z"
+     "end_time": "2025-03-18T08:46:04.924815Z",
+     "start_time": "2025-03-18T08:46:04.590995Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "n = 10\n",
-    "embeddings_cut = embeddings[:10000]\n",
-    "embeddings_others = torch.cat((embeddings_cut[:n], embeddings_cut[n+1:]), dim=0).detach().cpu()\n",
-    "self_emb = embeddings_cut[n].detach().cpu()"
+    "n = 177\n",
+    "embeddings_cut = embeddings# embeddings[:10000]\n",
+    "embeddings_others = torch.cat((embeddings_cut[:n], embeddings_cut[n+1:]), dim=0)\n",
+    "self_emb = embeddings_cut[n]\n",
+    "\n",
+    "A = self_emb - embeddings_others\n",
+    "A.requires_grad = False\n",
+    "torch.all(A@self_emb>0)\n",
+    "\n",
+    "# embeddings_others = embeddings_others.detach().cpu()\n",
+    "# self_emb = self_embed.detach().cpu()\n",
+    "# A = A.detach().cpu()"
    ],
    "id": "625b514938fed3e8",
-   "outputs": [],
-   "execution_count": 6
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-17T20:57:52.834516Z",
-     "start_time": "2025-03-17T20:57:52.814560Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "A = self_emb - embeddings_others\n",
-    "torch.all(A@self_emb>0)"
-   ],
-   "id": "30e54874aff1efc7",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(True)"
+       "tensor(False)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 114
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-18T08:46:05.069918Z",
+     "start_time": "2025-03-18T08:46:05.066701Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "x = self_emb.detach().clone()\n",
+    "x.requires_grad = True\n",
+    "optimizer = torch.optim.SGD([x], lr=0.01)\n",
+    "optimizer = torch.optim.AdamW([x], lr=0.01)"
+   ],
+   "id": "1e8e946fd90a9be5",
+   "outputs": [],
+   "execution_count": 115
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-18T08:49:40.009677Z",
+     "start_time": "2025-03-18T08:46:05.776962Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "epsilon = 1e-4\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    loss = torch.sum(relu(-A@x+epsilon))\n",
+    "    print(f\"Initial loss = {loss}\")\n",
+    "\n",
+    "for step in range(1000):\n",
+    "    optimizer.zero_grad()\n",
+    "    loss = torch.sum(relu(-A@x+epsilon))\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    if (step+1) % 10 == 0:\n",
+    "        print(f\"Step {step+1}, Loss: {loss.item()}\")\n",
+    "    if loss.item() <= 0:\n",
+    "        break\n",
+    "\n",
+    "print(\"Optimization finished. Final x:\", loss.item())\n",
+    "print(f\"Target embedding - {torch.all(A@x>0).item()}, min = {torch.min(A@x)}\")"
+   ],
+   "id": "5121d00a62606561",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial loss = 6.931521415710449\n",
+      "Step 10, Loss: 0.030173495411872864\n",
+      "Step 20, Loss: 0.02480473183095455\n",
+      "Step 30, Loss: 0.017095521092414856\n",
+      "Step 40, Loss: 0.009619321674108505\n",
+      "Step 50, Loss: 0.004163955803960562\n",
+      "Step 60, Loss: 0.0018103988841176033\n",
+      "Step 70, Loss: 0.0009649852872826159\n",
+      "Step 80, Loss: 0.0005561368889175355\n",
+      "Step 90, Loss: 0.00037754763616248965\n",
+      "Step 100, Loss: 0.0003059612645301968\n",
+      "Step 110, Loss: 0.0002523293369449675\n",
+      "Step 120, Loss: 0.0002088374167215079\n",
+      "Step 130, Loss: 0.0001777974102878943\n",
+      "Step 140, Loss: 0.00015200275811366737\n",
+      "Step 150, Loss: 0.00013408041559159756\n",
+      "Step 160, Loss: 0.00012149220128776506\n",
+      "Step 170, Loss: 0.00010237032256554812\n",
+      "Step 180, Loss: 8.380766666959971e-05\n",
+      "Step 190, Loss: 6.539615424117073e-05\n",
+      "Step 200, Loss: 5.5209893616847694e-05\n",
+      "Step 210, Loss: 5.110912024974823e-05\n",
+      "Step 220, Loss: 4.761807213071734e-05\n",
+      "Step 230, Loss: 4.4579523091670126e-05\n",
+      "Step 240, Loss: 4.1886385588441044e-05\n",
+      "Step 250, Loss: 3.971511614508927e-05\n",
+      "Step 260, Loss: 3.761104017030448e-05\n",
+      "Step 270, Loss: 3.54997391696088e-05\n",
+      "Step 280, Loss: 3.335514338687062e-05\n",
+      "Step 290, Loss: 3.233054303564131e-05\n",
+      "Step 300, Loss: 3.15458164550364e-05\n",
+      "Step 310, Loss: 3.082215698668733e-05\n",
+      "Step 320, Loss: 3.0110342777334154e-05\n",
+      "Step 330, Loss: 2.939290425274521e-05\n",
+      "Step 340, Loss: 2.866381692001596e-05\n",
+      "Step 350, Loss: 2.792093437165022e-05\n",
+      "Step 360, Loss: 2.716362359933555e-05\n",
+      "Step 370, Loss: 2.6391688152216375e-05\n",
+      "Step 380, Loss: 2.5605171686038375e-05\n",
+      "Step 390, Loss: 2.4804117856547236e-05\n",
+      "Step 400, Loss: 2.3988672182895243e-05\n",
+      "Step 410, Loss: 2.3158849216997623e-05\n",
+      "Step 420, Loss: 2.2314830857794732e-05\n",
+      "Step 430, Loss: 2.1456595277413726e-05\n",
+      "Step 440, Loss: 2.0584295270964503e-05\n",
+      "Step 450, Loss: 1.9697996322065592e-05\n",
+      "Step 460, Loss: 1.879774936242029e-05\n",
+      "Step 470, Loss: 1.788364170351997e-05\n",
+      "Step 480, Loss: 1.731007796479389e-05\n",
+      "Step 490, Loss: 1.6872210835572332e-05\n",
+      "Step 500, Loss: 1.644613075768575e-05\n",
+      "Step 510, Loss: 1.6020356270018965e-05\n",
+      "Step 520, Loss: 1.559084194013849e-05\n",
+      "Step 530, Loss: 1.51561907841824e-05\n",
+      "Step 540, Loss: 1.471588620916009e-05\n",
+      "Step 550, Loss: 1.4269804523792118e-05\n",
+      "Step 560, Loss: 1.3817865692544729e-05\n",
+      "Step 570, Loss: 1.3360098819248378e-05\n",
+      "Step 580, Loss: 1.2896482076030225e-05\n",
+      "Step 590, Loss: 1.2427030014805496e-05\n",
+      "Step 600, Loss: 1.1951764463447034e-05\n",
+      "Step 610, Loss: 1.1470721801742911e-05\n",
+      "Step 620, Loss: 1.0983880201820284e-05\n",
+      "Step 630, Loss: 1.0491246939636767e-05\n",
+      "Step 640, Loss: 9.992851119022816e-06\n",
+      "Step 650, Loss: 9.488714567851275e-06\n",
+      "Step 660, Loss: 8.978822734206915e-06\n",
+      "Step 670, Loss: 8.46318289404735e-06\n",
+      "Step 680, Loss: 7.941802323330194e-06\n",
+      "Step 690, Loss: 2.686255902517587e-05\n",
+      "Step 700, Loss: 6.679067882942036e-05\n",
+      "Step 710, Loss: 1.762465399224311e-05\n",
+      "Step 720, Loss: 1.716683618724346e-05\n",
+      "Step 730, Loss: 1.6176469216588885e-05\n",
+      "Step 740, Loss: 1.4986748283263296e-05\n",
+      "Step 750, Loss: 1.3718468835577369e-05\n",
+      "Step 760, Loss: 1.2414195225574076e-05\n",
+      "Step 770, Loss: 1.1088894098065794e-05\n",
+      "Step 780, Loss: 9.747898729983717e-06\n",
+      "Step 790, Loss: 8.39300628285855e-06\n",
+      "Step 800, Loss: 7.150927558541298e-06\n",
+      "Step 810, Loss: 6.480375304818153e-06\n",
+      "Step 820, Loss: 5.851012247148901e-06\n",
+      "Step 830, Loss: 5.23246853845194e-06\n",
+      "Step 840, Loss: 4.614070348907262e-06\n",
+      "Step 850, Loss: 3.992048732470721e-06\n",
+      "Step 860, Loss: 3.3650867408141494e-06\n",
+      "Step 870, Loss: 2.732704160735011e-06\n",
+      "Step 880, Loss: 2.0947481971234083e-06\n",
+      "Step 890, Loss: 1.4511533663608134e-06\n",
+      "Step 900, Loss: 8.018614607863128e-07\n",
+      "Step 910, Loss: 1.469306880608201e-07\n",
+      "Optimization finished. Final x: 0.0\n",
+      "Target embedding - True, min = 0.00010010904225055128\n"
+     ]
+    }
+   ],
+   "execution_count": 116
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "8bbf5d845ff6c6dc"
   },
   {
    "metadata": {
