--- a/short_experiments/shadow_tokens.ipynb
+++ b/short_experiments/shadow_tokens.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T07:37:16.702522Z",
-     "start_time": "2025-03-18T07:37:16.699182Z"
+     "end_time": "2025-03-18T15:44:46.469409Z",
+     "start_time": "2025-03-18T15:44:42.962994Z"
     }
    },
    "cell_type": "code",
@@ -16,131 +16,70 @@
     "# from torch.linalg import svd\n",
     "from torch.linalg import svd\n",
     "\n",
-    "from torch.nn.functional import relu"
+    "from torch.nn.functional import relu\n",
+    "\n",
+    "from emb_vectors_functions import find_self_embeds, get_model_and_embed, get_shadow_ratios"
    ],
    "id": "c8a4c2d3a58c68cd",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T08:00:16.267154Z",
-     "start_time": "2025-03-18T08:00:11.790033Z"
+     "end_time": "2025-03-18T15:44:50.704293Z",
+     "start_time": "2025-03-18T15:44:47.650271Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "model_name = \"meta-llama/Llama-3.2-1B\" # \"meta-llama/Meta-Llama-3.1-8B\"  # \"meta-llama/Meta-Llama-3.1-8B\" , \"gpt2\", \"meta-llama/Llama-2-7b-hf\" # Example: using GPT-2\n",
-    "model = AutoModelForCausalLM.from_pretrained(model_name)\n",
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "# %%\n",
-    "# Loading embeddings:\n",
-    "# embedding = model.model.embed_tokens.weight  # Embedding layer weights\n",
-    "head = model.lm_head.weight.detach()  # Output head weights\n",
-    "head_norm = head / torch.norm(head)"
-   ],
-   "id": "b835f2d03816e47b",
-   "outputs": [],
-   "execution_count": 63
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-03-18T08:00:16.275077Z",
-     "start_time": "2025-03-18T08:00:16.272584Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
+    "model_name = \"meta-llama/Llama-3.2-1B\" # \"meta-llama/Meta-Llama-3.1-8B\"  # \"meta-llama/Meta-Llama-3.1-8B\" , \"gpt2\", \"meta-llama/Llama-2-7b-hf\"\n",
+    "model, embedding, head, model_norm, mean_norm, tokenizer = get_model_and_embed(model_name)\n",
+    "\n",
+    "del model, embedding\n",
     "embeddings = head\n",
     "embeddings.requires_grad = False"
    ],
-   "id": "5fef29185b12e15e",
+   "id": "d4805a55975d91ef",
    "outputs": [],
-   "execution_count": 64
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T07:31:36.319573Z",
-     "start_time": "2025-03-18T07:31:22.696877Z"
+     "end_time": "2025-03-18T15:44:57.372739Z",
+     "start_time": "2025-03-18T15:44:54.684016Z"
     }
    },
    "cell_type": "code",
-   "source": [
-    "# def find_self_embeds(embedding):\n",
-    "start = 0\n",
-    "end = len(embeddings)\n",
-    "all_indices = np.array(range(end))\n",
-    "batch_size = 10000\n",
-    "batches = [\n",
-    "    range(i, min(i + batch_size, end)) for i in range(start, end, batch_size)\n",
-    "]\n",
-    "eqs = []\n",
-    "embeddings = embeddings.cuda()\n",
-    "\n",
-    "for batch in tqdm(batches):\n",
-    "    indices = np.array(list(batch))\n",
-    "    X = embeddings[batch]\n",
-    "    w = np.array(torch.argmax(X @ embeddings.T, dim=-1).cpu())\n",
-    "    eq = indices == w\n",
-    "    eqs.extend(eq)\n",
-    "eqs = np.array(eqs)\n",
-    "print(f\"failed matching = {sum(~eqs)}\")\n",
-    "fail_indices = all_indices[~eqs]"
-   ],
-   "id": "7afc825d900aeefc",
+   "source": "fail_indices, failed_res_emb, failed_pairs = find_self_embeds(embeddings, tokenizer)",
+   "id": "35320c67765020f1",
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/13 [00:00<?, ?it/s]C:\\Users\\Timur\\AppData\\Local\\Temp\\ipykernel_21532\\2878507353.py:15: DeprecationWarning: __array__ implementation doesn't accept a copy keyword, so passing copy=False failed. __array__ must implement 'dtype' and 'copy' keyword arguments.\n",
-      "  w = np.array(torch.argmax(X @ embeddings.T, dim=-1).cpu())\n",
-      "100%|██████████| 13/13 [00:13<00:00,  1.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "failed matching = 615\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 13/13 [00:02<00:00,  6.26it/s]\n"
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T07:31:38.279444Z",
-     "start_time": "2025-03-18T07:31:36.472975Z"
+     "end_time": "2025-03-18T15:45:26.043659Z",
+     "start_time": "2025-03-18T15:45:25.243208Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "shadow_ratios = []\n",
-    "for ind in fail_indices:\n",
-    "    max_sims = torch.sort(embeddings[ind]@embeddings.T, descending=True)[0][:3]\n",
-    "    max_sim = max_sims[0]\n",
-    "    true_sim = embeddings[ind]@embeddings[ind]\n",
-    "    true_ratio = true_sim / max_sim\n",
-    "    max_ratio = max_sims[1] / max_sim\n",
-    "    max_ratio_2 = max_sims[2] / max_sim\n",
-    "    shadow_ratios.append((ind, true_ratio.item(), max_ratio.item(), max_ratio_2.item()))\n",
+    "shadow_ratios = get_shadow_ratios(fail_indices, embeddings)\n",
     "shadow_ratios_sorted = sorted(shadow_ratios, key=lambda x: x[1], reverse = True);"
    ],
    "id": "e8946f32374c8154",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -354,9 +293,6 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
      "start_time": "2025-03-17T20:59:30.169269Z"
     }
