--- a/short_experiments/emb_vectors_self.ipynb
+++ b/short_experiments/emb_vectors_self.ipynb
@@ -6,7 +6,7 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "'''\n",
+    "\"\"\"\n",
     "Question: if you take any vector from the embedding metric,\n",
     "is it true that its dot-product will be maximal with itself, and with other vectors - less?\n",
     "In other words, if you encode a token into a vector, then is it decoded back using argmax.\n",
@@ -18,7 +18,7 @@
     "It's also interesting that after normalizing everything with a vector,\n",
     "everything fell into place for the input embedding matrix, but head still gave 200 discrepancies,\n",
     "apparently due to a numerical error, if I didn't impose it anywhere.\n",
-    "'''"
+    "\"\"\""
    ],
    "id": "7c41f48363ab8f11"
   },
@@ -55,7 +55,7 @@
     "    std_norm = norms.std()\n",
     "    print(f\"Average Norm: {average_norm}\")\n",
     "    print(f\"Standard Deviation of Norms: {std_norm}\")\n",
-    "    print(f\"std/mead: {std_norm/average_norm}\")\n"
+    "    print(f\"std/mead: {std_norm/average_norm}\")"
    ],
    "id": "269aff29ec2964aa"
   },
@@ -67,12 +67,14 @@
    "source": [
     "# Loading embeddings:\n",
     "model_name = \"meta-llama/Meta-Llama-3.1-8B\"  # \"meta-llama/Meta-Llama-3.1-8B\" , \"gpt2\", \"meta-llama/Llama-2-7b-hf\"\n",
-    "model, embedding, head, model_norm, mean_norm, tokenizer = get_model_and_embed(model_name)\n",
+    "model, embedding, head, model_norm, mean_norm, tokenizer = get_model_and_embed(\n",
+    "    model_name\n",
+    ")\n",
     "\n",
     "embedding_norm = (embedding.T / torch.norm(embedding, p=2, dim=1)).T\n",
     "head_norm = (head.T / torch.norm(head, p=2, dim=1)).T\n",
-    "embedding_rms_norm  = model_norm(embedding)\n",
-    "head_rms_norm  = model_norm(head)"
+    "embedding_rms_norm = model_norm(embedding)\n",
+    "head_rms_norm = model_norm(head)"
    ],
    "id": "36948eb932804f3d"
   },
@@ -81,7 +83,11 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "tokens_dist = get_tokens_from_vectors(head, batch_size=1000, num_batches=1000, do_rms=False, model_norm=model_norm)",
+   "source": [
+    "tokens_dist = get_tokens_from_vectors(\n",
+    "    head, batch_size=1000, num_batches=1000, do_rms=False, model_norm=model_norm\n",
+    ")"
+   ],
    "id": "cb276a48d8877948"
   },
   {
@@ -98,8 +104,12 @@
    "outputs": [],
    "execution_count": null,
    "source": [
-    "decoded_counts = {tokenizer.decode(token_id): count for token_id, count in token_counts.items()}\n",
-    "decoded_counts = dict(sorted(decoded_counts.items(), key=lambda item: item[1], reverse=True))"
+    "decoded_counts = {\n",
+    "    tokenizer.decode(token_id): count for token_id, count in token_counts.items()\n",
+    "}\n",
+    "decoded_counts = dict(\n",
+    "    sorted(decoded_counts.items(), key=lambda item: item[1], reverse=True)\n",
+    ")"
    ],
    "id": "821ccf2dd9f9ae04"
   },
@@ -127,7 +137,11 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "failed_emb, failed_res_emb, failed_pairs = find_self_embeds(head, tokenizer, head_rms_norm)",
+   "source": [
+    "failed_emb, failed_res_emb, failed_pairs = find_self_embeds(\n",
+    "    head, tokenizer, head_rms_norm\n",
+    ")"
+   ],
    "id": "345a785118534e8d"
   },
   {
