--- a/short_experiments/shadow_tokens.ipynb
+++ b/short_experiments/shadow_tokens.ipynb
@@ -13,12 +13,17 @@
     "import torch\n",
     "from tqdm import tqdm\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
     "# from torch.linalg import svd\n",
     "from torch.linalg import svd\n",
     "\n",
     "from torch.nn.functional import relu\n",
     "\n",
-    "from emb_vectors_functions import find_self_embeds, get_model_and_embed, get_shadow_ratios"
+    "from emb_vectors_functions import (\n",
+    "    find_self_embeds,\n",
+    "    get_model_and_embed,\n",
+    "    get_shadow_ratios,\n",
+    ")"
    ],
    "id": "c8a4c2d3a58c68cd",
    "outputs": [],
@@ -33,8 +38,10 @@
    },
    "cell_type": "code",
    "source": [
-    "model_name = \"meta-llama/Llama-3.2-1B\" # \"meta-llama/Meta-Llama-3.1-8B\"  # \"meta-llama/Meta-Llama-3.1-8B\" , \"gpt2\", \"meta-llama/Llama-2-7b-hf\"\n",
-    "model, embedding, head, model_norm, mean_norm, tokenizer = get_model_and_embed(model_name)\n",
+    "model_name = \"meta-llama/Llama-3.2-1B\"  # \"meta-llama/Meta-Llama-3.1-8B\"  # \"meta-llama/Meta-Llama-3.1-8B\" , \"gpt2\", \"meta-llama/Llama-2-7b-hf\"\n",
+    "model, embedding, head, model_norm, mean_norm, tokenizer = get_model_and_embed(\n",
+    "    model_name\n",
+    ")\n",
     "\n",
     "del model, embedding\n",
     "embeddings = head\n",
@@ -75,7 +82,7 @@
    "cell_type": "code",
    "source": [
     "shadow_ratios = get_shadow_ratios(fail_indices, embeddings)\n",
-    "shadow_ratios_sorted = sorted(shadow_ratios, key=lambda x: x[1], reverse = True);"
+    "shadow_ratios_sorted = sorted(shadow_ratios, key=lambda x: x[1], reverse=True);"
    ],
    "id": "e8946f32374c8154",
    "outputs": [],
@@ -91,13 +98,13 @@
    "cell_type": "code",
    "source": [
     "n = 177\n",
-    "embeddings_cut = embeddings# embeddings[:10000]\n",
-    "embeddings_others = torch.cat((embeddings_cut[:n], embeddings_cut[n+1:]), dim=0)\n",
+    "embeddings_cut = embeddings  # embeddings[:10000]\n",
+    "embeddings_others = torch.cat((embeddings_cut[:n], embeddings_cut[n + 1 :]), dim=0)\n",
     "self_emb = embeddings_cut[n]\n",
     "\n",
     "A = self_emb - embeddings_others\n",
     "A.requires_grad = False\n",
-    "torch.all(A@self_emb>0)\n",
+    "torch.all(A @ self_emb > 0)\n",
     "\n",
     "# embeddings_others = embeddings_others.detach().cpu()\n",
     "# self_emb = self_embed.detach().cpu()\n",
@@ -148,16 +155,16 @@
     "epsilon = 1e-4\n",
     "\n",
     "with torch.no_grad():\n",
-    "    loss = torch.sum(relu(-A@x+epsilon))\n",
+    "    loss = torch.sum(relu(-A @ x + epsilon))\n",
     "    print(f\"Initial loss = {loss}\")\n",
     "\n",
     "for step in range(1000):\n",
     "    optimizer.zero_grad()\n",
-    "    loss = torch.sum(relu(-A@x+epsilon))\n",
+    "    loss = torch.sum(relu(-A @ x + epsilon))\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "\n",
-    "    if (step+1) % 10 == 0:\n",
+    "    if (step + 1) % 10 == 0:\n",
     "        print(f\"Step {step+1}, Loss: {loss.item()}\")\n",
     "    if loss.item() <= 0:\n",
     "        break\n",
@@ -300,12 +307,12 @@
    "cell_type": "code",
    "source": [
     "n, d = A.shape  # A is (n, d), x is (n,)\n",
-    "epsilon=1e-6\n",
+    "epsilon = 1e-6\n",
     "\n",
     "c = np.zeros(d)  # No objective function, just feasibility\n",
     "bounds = [(None, None)] * d  # x can take any value\n",
     "\n",
-    "res = linprog(c, A_ub=-A, b_ub=-epsilon * np.ones(n), bounds=bounds, method='highs')"
+    "res = linprog(c, A_ub=-A, b_ub=-epsilon * np.ones(n), bounds=bounds, method=\"highs\")"
    ],
    "id": "38853639399f3cb",
    "outputs": [],
@@ -371,7 +378,7 @@
    "source": [
     "# Null space basis vectors correspond to zero singular values\n",
     "tol = 1e-10  # Tolerance to detect numerical zeros\n",
-    "null_space = Vt[S < tol] # Extract null space basis"
+    "null_space = Vt[S < tol]  # Extract null space basis"
    ],
    "id": "e4246d39e0c00517",
    "outputs": [
@@ -380,10 +387,10 @@
      "evalue": "The shape of the mask [2048] at index 0 does not match the shape of the indexed tensor [9999, 9999] at index 0",
      "output_type": "error",
      "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mIndexError\u001B[39m                                Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[68]\u001B[39m\u001B[32m, line 3\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# Null space basis vectors correspond to zero singular values\u001B[39;00m\n\u001B[32m      2\u001B[39m tol = \u001B[32m1e-10\u001B[39m  \u001B[38;5;66;03m# Tolerance to detect numerical zeros\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m null_space = \u001B[43mVt\u001B[49m\u001B[43m[\u001B[49m\u001B[43mS\u001B[49m\u001B[43m \u001B[49m\u001B[43m<\u001B[49m\u001B[43m \u001B[49m\u001B[43mtol\u001B[49m\u001B[43m]\u001B[49m \u001B[38;5;66;03m# Extract null space basis\u001B[39;00m\n",
-      "\u001B[31mIndexError\u001B[39m: The shape of the mask [2048] at index 0 does not match the shape of the indexed tensor [9999, 9999] at index 0"
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mIndexError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[68]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Null space basis vectors correspond to zero singular values\u001b[39;00m\n\u001b[32m      2\u001b[39m tol = \u001b[32m1e-10\u001b[39m  \u001b[38;5;66;03m# Tolerance to detect numerical zeros\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m null_space = \u001b[43mVt\u001b[49m\u001b[43m[\u001b[49m\u001b[43mS\u001b[49m\u001b[43m \u001b[49m\u001b[43m<\u001b[49m\u001b[43m \u001b[49m\u001b[43mtol\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;66;03m# Extract null space basis\u001b[39;00m\n",
+      "\u001b[31mIndexError\u001b[39m: The shape of the mask [2048] at index 0 does not match the shape of the indexed tensor [9999, 9999] at index 0"
      ]
     }
    ],
@@ -439,11 +446,11 @@
    "cell_type": "code",
    "source": [
     "d, n = A.T.shape\n",
-    "epsilon=1e-6\n",
+    "epsilon = 1e-6\n",
     "\n",
     "c = np.zeros(n)\n",
     "bounds = [(epsilon, None)] * n  # Enforce strict positivity (x_i > epsilon)\n",
-    "res = linprog(c, A_eq=A.T, b_eq=np.zeros(d), bounds=bounds, method='highs')"
+    "res = linprog(c, A_eq=A.T, b_eq=np.zeros(d), bounds=bounds, method=\"highs\")"
    ],
    "id": "79983c1856295dab",
    "outputs": [],
