Added training loop

--- a/short_experiments/shadow_tokens.ipynb
+++ b/short_experiments/shadow_tokens.ipynb
@@ -3,13 +3,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T18:29:39.344917Z",
-     "start_time": "2025-03-18T18:29:35.920638Z"
+     "end_time": "2025-03-18T19:12:09.600514Z",
+     "start_time": "2025-03-18T19:12:09.596676Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import torch\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from emb_vectors_functions import (\n",
     "    find_self_embeds,\n",
@@ -19,7 +20,7 @@
    ],
    "id": "c8a4c2d3a58c68cd",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 97
   },
   {
    "metadata": {
@@ -83,77 +84,58 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T18:55:48.125499Z",
-     "start_time": "2025-03-18T18:55:43.950992Z"
+     "end_time": "2025-03-18T19:12:20.124961Z",
+     "start_time": "2025-03-18T19:12:20.120840Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "n = 124\n",
-    "embeddings_cut = embeddings  # embeddings[:10000]\n",
-    "embeddings_others = torch.cat((embeddings_cut[:n], embeddings_cut[n + 1 :]), dim=0)\n",
-    "self_emb = embeddings_cut[n]\n",
-    "\n",
-    "A = self_emb - embeddings_others\n",
-    "A.requires_grad = False\n",
-    "torch.all(A @ self_emb > 0)\n",
-    "\n",
-    "embeddings_others = embeddings_others.detach()\n",
-    "self_emb = self_emb.detach()\n",
-    "A = A.detach()\n",
-    "x = self_emb.detach().clone()\n",
-    "x.requires_grad = True\n",
-    "optimizer = torch.optim.SGD([x], lr=0.01)\n",
-    "optimizer = torch.optim.AdamW([x], lr=0.01)\n",
-    "\n",
-    "epsilon = 1e-4\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    loss = torch.sum(torch.relu(-A @ x + epsilon))\n",
-    "    print(f\"Initial loss = {loss}\")\n",
-    "\n",
-    "for step in range(1000):\n",
-    "    optimizer.zero_grad()\n",
-    "    loss = torch.sum(torch.relu(-A @ x + epsilon))\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "    if (step + 1) % 100 == 0:\n",
-    "        print(f\"Step {step+1}, Loss: {loss.item()}\")\n",
-    "    if loss.item() <= 0:\n",
-    "        break\n",
-    "\n",
-    "print(\"Optimization finished. Final x:\", loss.item())\n",
-    "print(f\"Target embedding - {torch.all(A@x>0).item()}, min = {torch.min(A@x)}\")"
+    "# n = 124\n",
+    "# embeddings_cut = embeddings  # embeddings[:10000]\n",
+    "# embeddings_others = torch.cat((embeddings_cut[:n], embeddings_cut[n + 1 :]), dim=0)\n",
+    "# self_emb = embeddings_cut[n]\n",
+    "#\n",
+    "# A = self_emb - embeddings_others\n",
+    "# A.requires_grad = False\n",
+    "# torch.all(A @ self_emb > 0)\n",
+    "#\n",
+    "# embeddings_others = embeddings_others.detach()\n",
+    "# self_emb = self_emb.detach()\n",
+    "# A = A.detach()\n",
+    "# x = self_emb.detach().clone()\n",
+    "# x.requires_grad = True\n",
+    "# optimizer = torch.optim.SGD([x], lr=0.01)\n",
+    "# optimizer = torch.optim.AdamW([x], lr=0.01)\n",
+    "#\n",
+    "# epsilon = 1e-4\n",
+    "#\n",
+    "# with torch.no_grad():\n",
+    "#     loss = torch.sum(torch.relu(-A @ x + epsilon))\n",
+    "#     print(f\"Initial loss = {loss}\")\n",
+    "#\n",
+    "# for step in range(1000):\n",
+    "#     optimizer.zero_grad()\n",
+    "#     loss = torch.sum(torch.relu(-A @ x + epsilon))\n",
+    "#     loss.backward()\n",
+    "#     optimizer.step()\n",
+    "#\n",
+    "#     if (step + 1) % 100 == 0:\n",
+    "#         print(f\"Step {step+1}, Loss: {loss.item()}\")\n",
+    "#     if loss.item() <= 0:\n",
+    "#         break\n",
+    "#\n",
+    "# print(\"Optimization finished. Final x:\", loss.item())\n",
+    "# print(f\"Target embedding - {torch.all(A@x>0).item()}, min = {torch.min(A@x)}\")"
    ],
    "id": "625b514938fed3e8",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initial loss = 6.937034606933594\n",
-      "Step 100, Loss: 0.00045663019409403205\n",
-      "Step 200, Loss: 0.0001864949445007369\n",
-      "Step 300, Loss: 0.00011208559590158984\n",
-      "Step 400, Loss: 7.662771531613544e-05\n",
-      "Step 500, Loss: 6.027078052284196e-05\n",
-      "Step 600, Loss: 3.7434889236465096e-05\n",
-      "Step 700, Loss: 1.3979071809444577e-05\n",
-      "Step 800, Loss: 4.358837031759322e-06\n",
-      "Step 900, Loss: 0.0\n",
-      "Optimization finished. Final x: 0.0\n",
-      "Target embedding - True, min = 0.00010008066601585597\n"
-     ]
-    }
-   ],
-   "execution_count": 75
+   "outputs": [],
+   "execution_count": 98
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T18:53:50.703712Z",
-     "start_time": "2025-03-18T18:53:50.696598Z"
+     "end_time": "2025-03-18T19:14:00.058237Z",
+     "start_time": "2025-03-18T19:14:00.049679Z"
     }
    },
    "cell_type": "code",
@@ -184,7 +166,7 @@
     "        loss = calc_loss(x_optim, self_emb, X, mask)\n",
     "        print(f\"Initial loss = {loss.item()}\")\n",
     "\n",
-    "    for step in range(n_steps):\n",
+    "    for step in tqdm(range(n_steps)):\n",
     "        optimizer.zero_grad()\n",
     "\n",
     "        loss = calc_loss(x_optim, self_emb, X, mask)\n",
@@ -201,26 +183,26 @@
    ],
    "id": "56ced80957683661",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 105
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T18:53:51.037303Z",
-     "start_time": "2025-03-18T18:53:51.034111Z"
+     "end_time": "2025-03-18T19:14:01.507183Z",
+     "start_time": "2025-03-18T19:14:01.503636Z"
     }
    },
    "cell_type": "code",
-   "source": "n_lst = fail_indices[:4]",
+   "source": "n_lst = fail_indices",
    "id": "7d8304977669069b",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": 106
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T18:53:53.751395Z",
-     "start_time": "2025-03-18T18:53:51.376142Z"
+     "end_time": "2025-03-18T19:15:08.930851Z",
+     "start_time": "2025-03-18T19:14:49.334377Z"
     }
    },
    "cell_type": "code",
@@ -231,18 +213,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initial loss = 27.730876922607422\n",
-      "Final loss = 0.0004165483987890184\n"
+      "Initial loss = 3053.449951171875\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:18<00:00, 52.96it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final loss = 0.06469347327947617\n"
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 118
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T18:53:53.759985Z",
-     "start_time": "2025-03-18T18:53:53.756936Z"
+     "end_time": "2025-03-18T19:15:10.337291Z",
+     "start_time": "2025-03-18T19:15:10.333236Z"
     }
    },
    "cell_type": "code",
@@ -254,65 +249,80 @@
    ],
    "id": "894e110bb4b731c5",
    "outputs": [],
-   "execution_count": 70
+   "execution_count": 119
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T19:04:46.694094Z",
-     "start_time": "2025-03-18T19:04:46.687480Z"
+     "end_time": "2025-03-18T19:15:11.786821Z",
+     "start_time": "2025-03-18T19:15:11.779982Z"
     }
    },
    "cell_type": "code",
    "source": [
     "xqq = torch.min(xA1, dim=1)[0]\n",
-    "xqq"
+    "torch.min(xqq)"
    ],
    "id": "a9904b13f41d051d",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([9.3132e-05, 9.7319e-05, 1.0000e-04, 9.3073e-05], device='cuda:0',\n",
-       "       grad_fn=<MinBackward0>)"
+       "tensor(4.3809e-06, device='cuda:0', grad_fn=<MinBackward1>)"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 79
+   "execution_count": 120
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-18T19:10:52.700380Z",
-     "start_time": "2025-03-18T19:10:52.667076Z"
+     "end_time": "2025-03-18T19:15:21.230533Z",
+     "start_time": "2025-03-18T19:15:17.677453Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "qq = []\n",
+    "\n",
     "for n, x in zip(n_lst, x_optim):\n",
     "    embeddings_others = torch.cat((embeddings[:n], embeddings[n + 1 :]), dim=0)\n",
     "    x0 = embeddings[n]\n",
     "    A = x0 - embeddings_others\n",
-    "    print(f\"Target embedding - {torch.all(A@x>0).item()}, min = {torch.min(A@x)}\")"
+    "    # print(f\"Target embedding - {torch.all(A@x>0).item()}, min = {torch.min(A@x)}\")\n",
+    "    qq.append(torch.all(A@x>0).item())"
    ],
    "id": "6e45092a02b91d37",
+   "outputs": [],
+   "execution_count": 121
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-18T19:15:22.671431Z",
+     "start_time": "2025-03-18T19:15:22.667852Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "sum(qq)/len(qq)",
+   "id": "2567a0c7a451d356",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Target embedding - True, min = 9.319287346443161e-05\n",
-      "Target embedding - True, min = 9.72848865785636e-05\n",
-      "Target embedding - True, min = 0.00010005751391872764\n",
-      "Target embedding - True, min = 9.309838060289621e-05\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": 93
+   "execution_count": 122
   },
   {
    "metadata": {
